# argus

./: .gitignore  DECISION_GUIDE.md  DECISION_SUMMARY.md  EDGE_CASE_ANALYSIS.md  IMPLEMENTATION_SPEC.md  MASTER_PROMPT_OPENCODE.md  PHASE_BUILD_PLAN.md  PI4_ROS2_ANALYSIS_PLAN.md  PRD.md  PRS.md  README.md  SELF_HOSTED_DEV_LOOP_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
argus/: __init__.py  __main__.py  cli.py  ui.py
argus/common/: __init__.py  logger.py
argus/core/: __init__.py  assess.py  models.py  optimizer.py  peripherals.py  profiler.py  project_tools.py  ram_sampler.py  stresser.py  toolbox.py
argus/host/: __init__.py  bridge.py  mcp_host.py  scanner.py
argus/mcp/: __init__.py  auth.py  resources.py  server.py  transports.py
argus/robotics/: __init__.py  ros_manager.py
argus/safety/: __init__.py  blast_radius.py  blocklist.py  gatekeeper.py
argus/state/: __init__.py  knowledge.py  report.py  report_store.py
configs/apple-m4/: build_flags.json  cyclonedds.xml  fastdds.xml  install_ros2.sh  metadata.yaml  sysctl.conf  zenoh_advice.md
configs/bcm2712-pi-5/: build_flags.json  cyclonedds.xml  fastdds.xml  metadata.yaml  sysctl.conf
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_SCHEMA.md  DEPLOYMENT.md  SECURITY.md  TEST_PLAN.md  USER_MANUAL.md  UX_DESIGN.md
scripts/: argus-pi-optimize-deploy.sh  argus-quick-deploy.sh  generate_terminal_assets.py  pi4_demo_profile.py  pi4_profile_collector.sh
tests/: test_bridge_diagnostics.py  test_core.py  test_host_bridge.py  test_host_scanner.py  test_logger.py  test_new_tools.py  test_ros_manager.py
(+11 files in other folders)
