[project]
name = "argus"
version = "0.1.0"
description = "Arm-native ROS 2 diagnostic & optimization platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "psutil>=5.9",
    "numpy>=1.26",
    "fastmcp>=3.0",
    "httpx>=0.27",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
full = [
    "pyhwloc>=2.0",
    "stress-ng>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "black>=24.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["argus*"]
exclude = ["configs*", "tests*", "scripts*", "docs*", "*.egg-info"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true

[project.scripts]
argus = "argus.__main__:main"